fix: harden null agent responses across correction paths